tests/invalid/unknown_symbol.ri
enum MyEnum {
    Musk
}

func main() {
    unknown_fn();
    let x = UnknownStruct();
    let z = unknown_var;
    _ = MyEnum.Mark;
}
